--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-<head>
-</head>
-<body>
-   <label for = "imageFile"> Back Camera: </label>
-   <input type = "file" id = "imageFile" capture="environment" accept = "images/*">
-    
-   <label for = "imageFile"> Front Camera: </label>
-   <input type = "file" id = "imageFile" capture="user" accept = "images/*">
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Capture</title>
+  </head>
+  <body>
+  	<center>
+	    <form>
+		  <div class="form-group">
+		  	<label for="uploadImage" class="btn">From Camera</label>
+		    <input type="file" class="form-control-file" id="uploadImage" capture="environment" accept = "images/*" onchange="PreviewImage();">
+		    <img src="" id="uploadPreview" width="auto" height="auto">
+		  </div>
+		</form>
+	</center>
+  </body>
+	<script type="text/javascript">
+    function PreviewImage() {
+        var oFReader = new FileReader();
+        oFReader.readAsDataURL(document.getElementById("uploadImage").files[0]);
+
+        oFReader.onload = function (oFREvent) {
+            document.getElementById("uploadPreview").src = oFREvent.target.result;
+        };
+    };
+	</script>
 </html>
